# PDFTalk

./: .gitignore  README.md  app.py  main.py  main_final.py  main_gpt.py  pyproject.toml  requirements.txt  requirements_streamlit.txt  run_streamlit.py  streamlit_app.py
templates/: index.html
