[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdftalk"
version = "1.0.0"
description = "AI-powered PDF question answering tool using Streamlit"
authors = [{name = "PDFTalk", email = "contact@pdftalk.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pdf", "ai", "question-answering", "streamlit", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "streamlit>=1.32.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0", 
    "pymupdf>=1.23.0",
    "sentence-transformers>=2.5.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0,<2.0.0",
    "torch>=2.0.0,<2.2.0",
    "transformers>=4.30.0,<5.0.0",
    "rank-bm25>=0.2.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/pdftalk"
Repository = "https://github.com/yourusername/pdftalk"
Issues = "https://github.com/yourusername/pdftalk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]

[tool.streamlit]
[tool.streamlit.server]
port = 8501
headless = true